Fixed code and iframe overflowing

--- a/styles.css
+++ b/styles.css
@@ -243,6 +243,19 @@ nav a:hover {
 .centerVideo {
     display: flex;
     justify-content: center;
+    width: 100%;
+    position: relative;
+    width: 100%; 
+    padding-top: 56.25%;
+    overflow: hidden;
+}
+iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%; 
+    border: 0; 
 }
 @media screen and (max-width: 1200px) {
     .hello {
